--- a/WemosD1WiFiApp/app/src/main/AndroidManifest.xml
+++ b/WemosD1WiFiApp/app/src/main/AndroidManifest.xml
@@ -3,20 +3,29 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="android.permission.READ_PHONE_STATE" />
+    <uses-permission android:name="android.permission.WAKE_LOCK" />
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
     <uses-permission android:name="android.permission.CHANGE_WIFI_STATE" />
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
+
+
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
-        android:label="@string/app_name"
+        android:label="SmartPlanter"
         android:supportsRtl="true"
         android:theme="@style/Theme.WemosD1WiFiApp"
         android:usesCleartextTraffic="true"
         tools:targetApi="31">
+
+        <service android:name="org.eclipse.paho.android.service.MqttService"></service>
+        <activity
+            android:name=".WiFiScan"
+            android:exported="false" />
         <activity
             android:name=".WaterPlants"
             android:exported="false" />
